--- a/src/components/DarkMode/DarkMode.css
+++ b/src/components/DarkMode/DarkMode.css
@@ -2,6 +2,7 @@
     margin: -50px 10% 30px 90%;
 }
 
+
 .dark_mode_label:after {
     content: "";
     width: 25px;
@@ -12,6 +13,19 @@
     background: linear-gradient(180deg, #ffcc89, #d8860b);
     border-radius: 180px;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+}
+
+.dark_mode_label {
+    width: 65px;
+    height: 30px;
+    position: relative;
+    display: block;
+    background: #388ae2;
+    border-radius: 200px;
+    box-shadow: inset 0px 5px 15px rgba(0, 0, 0, 0.4),
+        inset 0px -5px 15px rgba(255, 255, 255, 0.4);
+    cursor: pointer;
     transition: 0.3s;
 }
 .dark_mode_input {
